2008-06-27  Edward Hervey  <edward.hervey@collabora.co.uk>

	* testsuite/test_xml.py:
	Don't attempt to test gst.XML if there's no available libxml2 module.

2008-06-27  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/gstbuffer.override:
        the GstBuffer overrides seem to be confused about whether they're
	mini-objects or a GBoxed, and it makes copy_on_write no actually
	return a usable gst.Buffer. Fix up places where GstBuffers are 
	treated as GBoxed to use pygstminiobject functions.

	Makes gst.Buffer('blah').copy_on_write() work.

	* testsuite/test_buffer.py:
	Add test for copy-on-write writability

	* examples/buffer-draw.py:
	Add an example of drawing on a GStreamer buffer with cairo

	* gst/gstpad.override:
	Make function static

2008-06-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/common.h:
	* gst/gstmodule.c:
	* gst/interfaces.override:
	* gst/pbutils.override:
	* gst/pygstiterator.c:
	* gst/pygstminiobject.c:
	* gst/pygstminiobject.h:
	Fix double-import issues on macosx.
	Fixes #461838

2008-06-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstmodule.c: (pygstminiobject_from_gvalue):
	Return None if GstMiniObject GValue doesn't contain anything (NULL).
	Fixes #540221

2008-06-20  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Bump version back to dev -> 0.10.12.1

=== release 0.10.12 ===

2008-06-18  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.12, "A Wild Finish"

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.11.3 pre-release

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/__init__.py:
	* gst/gstelement.override:
	* testsuite/test_element.py:
	Revert 2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>
	Re-opens #530417

2008-06-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstpad.override:
	* testsuite/test_pad.py:
	Revert 2008-02-10  Alessandro Decina  <alessandro@nnva.org>
	Re-opens #514717
